@@ -1,9 +1,5 @@
 package org.ihtsdo.authoring.scheduler.api.service.dao;
 
-import org.apache.commons.io.FileUtils;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
@@ -11,25 +7,22 @@ import java.nio.file.Path;
 
 public class ArbitraryFileService {
 
-	public static final String UTF_8 = "UTF-8";
-
 	protected File baseDirectory;
-	private static final Logger LOGGER = LoggerFactory.getLogger(ArbitraryFileService.class);
 
 	public ArbitraryFileService() {
 		this.baseDirectory = new File("resources/org.ihtsdo.authoring.single.api");
 	}
 
 	public void write(String path, String data) throws IOException {
-		Files.write(getFile(path), data.getBytes(UTF_8));
+		Files.writeString(getFile(path), data);
 	}
 
 	public String read(String path) throws IOException {
-		return new String(Files.readAllBytes(getFile(path)), UTF_8);
+		return Files.readString(getFile(path));
 	}
 	
 	public String read(File file) throws IOException {
-		return new String(Files.readAllBytes(file.toPath()), UTF_8);
+		return Files.readString(file.toPath());
 	}
 
 	private Path getFile(String relativePath) throws IOException {
@@ -46,17 +39,4 @@ public class ArbitraryFileService {
 		return file.toPath();
 	}
 
-	public void delete(String relativePath) {
-		final File file = new File(baseDirectory, relativePath);
-		if (file.isFile() && !file.delete()) {
-			LOGGER.warn("Failed to delete file {}", file.getAbsolutePath());
-		}
-	}
-
-	public void moveFiles(String fromRelativePath, String toRelativePath) throws IOException {
-		File fromDir = new File(baseDirectory, fromRelativePath);
-		File toDir = new File(baseDirectory, toRelativePath);
-		FileUtils.moveDirectory(fromDir, toDir);
-		
-	}
 }
